# bullpen-signal

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/dashboard/: README.md  main.py  synthetic_data.py
batch/dbt_project/: README.md  dbt_project.yml  profiles.example.yml
docs/: COMMIT_PLAN.md  external_commitments.md
docs/adr/: 0001-why-dual-path.md  0002-redpanda-for-event-bus.md  0003-iceberg-on-minio.md  0004-pyflink-over-java.md  0005-duckdb-phase0-target.md  0006-synthesized-event-times.md  0007-ml-provenance.md  0012-streaming-foundation-decisions.md  README.md
docs/architecture/: overview.md
docs/case_studies/: README.md  _template.md
docs/diagrams/: milestone1-replay-to-bronze.md
docs/milestones/: milestone_2_silver_signal_plan.md
docs/phase1/: linkedin_post_2_draft.md  milestone_3_closeout.md
docs/phase2/: README.md
docs/phase3/: README.md
infra/docker/: README.md  docker-compose.yml  prometheus.yml
infra/docker/flink-libs/: .gitignore  README.md  download.sh
infra/docker/flink-pyflink/: Dockerfile  start-flink.sh
infra/scripts/: bootstrap_iceberg.py  create_bronze_tables.py  create_topics.sh
ingestion/cdc/: README.md
ingestion/noise_injector/: __init__.py
ingestion/replay_engine/: README.md  __init__.py  avro_publisher.py  config.py  events.py  game_state_deriver.py  mapping.py  producer.py  run.py  statcast_source.py  statsapi_source.py
lakehouse/: query.py
lakehouse/schemas/: bronze_pitches.py
streaming/flink_jobs/: README.md
streaming/schema_registry/: __init__.py  client.py
streaming/schemas/: README.md  alert_event.avsc  correction_event.avsc  game_state_event.avsc  pitch_event.avsc
tests/integration/: conftest.py  test_bronze_pitches_iceberg.py  test_replay_to_kafka.py  test_smoke_job.py  test_smoke_job_restart.py
tests/unit/: test_mapping.py  test_noise_injector.py
(+18 files in other folders)
